# vald-client-python

./: .gitignore  Makefile  README.md  VALD_CLIENT_PYTHON_VERSION  VALD_SHA  buf.gen.yaml  buf.work.yaml  buf.yaml  setup.cfg  setup.py
.github/: dependabot-cli.yaml
.github/workflows/: backport-deps.yaml  build.yml  e2e.yaml  e2e.yml  fossa.yml  pr-auto-merge.yaml  release.yml  sync.yaml  tmp-sync.yaml  update-deps.yaml
Makefile.d/: variables.mk
python/: agent_pb2.py  agent_pb2_grpc.py  payload_pb2.py  vald_pb2.py
src/: test.py
src/buf/validate/: expression_pb2.py  validate_pb2.py
src/buf/validate/priv/: private_pb2.py
src/google/api/: annotations_pb2.py  http_pb2.py
src/google/rpc/: status_pb2.py
src/tests/: test_e2e.py
src/vald/: __init__.py  agent_pb2.py  agent_pb2_grpc.py  payload_pb2.py  vald_pb2.py  vald_pb2_grpc.py
src/vald/agent/core/: __init__.py  agent_pb2.py  agent_pb2_grpc.py
src/vald/gateway/vald/: __init__.py  vald_pb2.py  vald_pb2_grpc.py
src/vald/payload/: __init__.py  payload_pb2.py
src/vald/v1/agent/: __init__.py
src/vald/v1/discoverer/: discoverer_pb2.py  discoverer_pb2_grpc.py
src/vald/v1/errors/: errors_pb2.py
src/vald/v1/gateway/: __init__.py
src/vald/v1/meta/: meta_pb2.py  meta_pb2_grpc.py
src/vald/v1/mirror/: mirror_pb2.py  mirror_pb2_grpc.py
src/vald/v1/payload/: __init__.py  payload_pb2.py
src/vald/v1/vald/: __init__.py  filter_pb2.py  filter_pb2_grpc.py  flush_pb2.py  flush_pb2_grpc.py  index_pb2.py  index_pb2_grpc.py  insert_pb2.py  insert_pb2_grpc.py  object_pb2.py  object_pb2_grpc.py  remove_pb2.py  remove_pb2_grpc.py  search_pb2.py  (+5 more)
src/validate/: validate_pb2.py
src/vtproto/: ext_pb2.py
(+15 files in other folders)
