[metadata]
name = vald-client-python
version = 0.0.1.post3
url = https://github.com/vdaas/vald-client-python
description = a client library for Vald (https://github.com/vdaas/vald).
long_description = file: README.md
author = Rintaro Okamura
author_email = rintaro.okamura@gmail.com
license_file = LICENSE

[options]
zip_safe = False
package_dir =
  =src
packages = find:
install_requires=
  protobuf
  grpcio
  googleapis-common-protos

[options.packages.find]
where=src
