[metadata]
name = vald-client-python
version = 1.2.2.post1
url = https://github.com/vdaas/vald-client-python
description = a client library for Vald (https://github.com/vdaas/vald).
long_description = file: README.md
long_description_content_type = text/markdown
author = Rintaro Okamura
author_email = rintaro.okamura@gmail.com
license_file = LICENSE

[options]
zip_safe = False
package_dir =
  =src
packages = find_namespace:
install_requires=
  protobuf
  grpcio
  googleapis-common-protos

[options.packages.find]
where = src
exclude = src.tests
