[metadata]
name = vald-client-python
version = 1.7.12
url = https://github.com/vdaas/vald-client-python
description = a client library for Vald (https://github.com/vdaas/vald).
long_description = file: README.md
long_description_content_type = text/markdown
author = vald team
author_email = vald@vdaas.org
license_file = LICENSE

[options]
zip_safe = False
package_dir =
  =src
packages = find_namespace:
install_requires=
  protobuf
  grpcio
  googleapis-common-protos

[options.packages.find]
where = src
exclude = tests*
